Money Manager 21.4.0
* Java 16
* JavaFX 16