@@ -11,14 +11,13 @@ import org.testng.Assert;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class BaseTest {
 
     protected static <T extends MoneyRecord> List<T> sortedById(Collection<T> list) {
         return list.stream()
             .sorted(Comparator.comparing(MoneyRecord::uuid))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     protected static void assertEmpty(Collection c) {
